network-policy/policies/08-allow-egress-to-demo-app.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: client-one-allow-egress-demo-app
spec:
  podSelector:
    matchLabels:
      app: client-one
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
  - to:
    - podSelector:
        matchLabels:
          app: demo-app
    ports:
    - port: 80
      protocol: TCP
